<resources>
    <string name="app_name">StoreNBA</string>
    <string name="conferencia_oeste">Conferencia Oeste</string>
    <string name="conferencia_este">Conferencia Este</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="no_tienes_una_cuenta_crear_cuenta">¿No tienes una cuenta? Crear Cuenta</string>
    <string name="ya_eres_usuario_iniciar_sesion">¿Ya eres usuario? Iniciar Sesion</string>
    <string name="cantidad">Cantidad</string>
    <string name="talla">Talla</string>
    <string name="pagar">PAGAR</string>
    <string name="modificar_perfil">Modificar Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="eliminar">Eliminar</string>
    <string name="datos">DATOS</string>
    <string name="pedidos">PEDIDOS</string>
    <string name="datos_seguridad">DATOS SEGURIDAD</string>
    <string name="modificar">Modificar</string>
    <string name="a_adir_al_carrito">Añadir al Carrito</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="direccion">Direccion</string>
    <string name="tarjeta">Tarjeta</string>
    <string-array name="desplegable_cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="despegable_tallas">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
</resources>