<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.pagar.PagarActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDireccion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etTarjeta"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/tarjeta"
        app:layout_constraintEnd_toEndOf="@+id/etDireccion"
        app:layout_constraintStart_toStartOf="@+id/etDireccion"
        app:layout_constraintTop_toBottomOf="@+id/etDireccion">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnPagarFinal"
        android:layout_width="199dp"
        android:layout_height="58dp"
        android:layout_marginTop="46dp"
        android:text="@string/pagar"
        app:layout_constraintEnd_toEndOf="@+id/etTarjeta"
        app:layout_constraintStart_toStartOf="@+id/etTarjeta"
        app:layout_constraintTop_toBottomOf="@+id/etTarjeta" />

</androidx.constraintlayout.widget.ConstraintLayout>